Fixed checkbox alignment

--- a/front-end/css/mainpage.css
+++ b/front-end/css/mainpage.css
@@ -1,3 +1,3 @@
 img{
-    margin-left: 5px;
+    margin-left: 0px;
 }
