--- a/front-end/css/passwordgenerationpage.css
+++ b/front-end/css/passwordgenerationpage.css
@@ -36,6 +36,11 @@ body{
     background-color: #03304d;
 }
 
+.checkbox-align {
+    text-align: justify;
+    text-indent: 300px;
+  }
+
 .center{
     text-align: center;
     width: 7%;
